--- a/index.Rmd
+++ b/index.Rmd
@@ -17,3 +17,6 @@ output: html_document
 
 
 The other tabs represent work/ analyses that I have completed. Please check them out
+
+
+Shiny APP link : - https://mkimari1.shinyapps.io/Beer_app/
