Updated the index file

--- a/index.Rmd
+++ b/index.Rmd
@@ -20,3 +20,5 @@ The other tabs represent work/ analyses that I have completed. Please check them
 
 
 Shiny APP link : - https://mkimari1.shinyapps.io/Beer_app/
+
+Youtube video link: - https://www.youtube.com/watch?v=C86O7qvLV6g
